--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(carolina VERSION 0.1.0)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
 
+find_package(Boost COMPONENTS program_options REQUIRED)
+
 find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
 
