--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,9 @@
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
+add_library(command_line_parser command_line_parser.cpp)
+target_link_libraries(command_line_parser ${Boost_LIBRARIES})
+
 add_library(progress_printer progress_printer.cpp)
-target_include_directories(progress_printer PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 add_executable(histograms histograms.cpp)
-target_include_directories(histograms PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(histograms ${Boost_LIBRARIES} progress_printer ${ROOT_LIBRARIES})
+target_link_libraries(histograms command_line_parser progress_printer ${ROOT_LIBRARIES})
