Script to merge TH1 histograms in output files

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(histograms command_line_parser progress_printer ${ROOT_LIB
 
 add_executable(multithread_screen multithread_screen.cpp)
 target_link_libraries(multithread_screen command_line_parser ${ROOT_LIBRARIES})
+
+add_executable(multithread_merge_output multithread_merge_output.cpp)
+target_link_libraries(multithread_merge_output command_line_parser ${ROOT_LIBRARIES})
