Code generation instead of all-purpose script

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,6 +5,8 @@ target_link_libraries(command_line_parser ${Boost_LIBRARIES})
 
 add_library(progress_printer progress_printer.cpp)
 
+add_executable(configure_tree configure_tree.cpp)
+
 add_executable(histograms histograms.cpp)
 target_link_libraries(histograms command_line_parser progress_printer ${ROOT_LIBRARIES})
 
