--- a/generated_code/CMakeLists.txt.in
+++ b/generated_code/CMakeLists.txt.in
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(carolina VERSION 0.1.0)
+project(carolina VERSION @PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
 
@@ -8,6 +8,6 @@ find_package(Boost COMPONENTS program_options REQUIRED)
 find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
 
-add_subdirectory(source)
+include_directories(${CMAKE_SOURCE_DIR}/include)
+link_directories(${CMAKE_BINARY_DIR}/source)
 
-configure_file(generated_code/CMakeLists.txt.in generated_code/CMakeLists.txt)
