--- a/code_generation/CMakeLists.txt.in
+++ b/code_generation/CMakeLists.txt.in
@@ -11,3 +11,7 @@ include(${ROOT_USE_FILE})
 include_directories(${CMAKE_SOURCE_DIR}/include)
 link_directories(${CMAKE_BINARY_DIR}/source)
 
+if(EXISTS histograms_1d.cpp)
+    add_executable(histograms_1d histograms_1d.cpp)
+    target_link_libraries(histograms_1d ${Boost_LIBRARIES} command_line_parser progress_printer ${ROOT_LIBRARIES})
+endif()
