Histograms of timestamp differences
- Separate headers for various structs
- Remove unnecessary 'functional' and 'pair' includes

--- a/code_generation/histograms_1d.cpp.in
+++ b/code_generation/histograms_1d.cpp.in
@@ -51,7 +51,11 @@ int main(int argc, char* argv[]){
 
     for(int i = first; i <= last; ++i){
         progress_printer(i - first);
+
+        @TREE_LOOP_PREVIOUS@
+
         tree->GetEntry(i);
+        
         @TREE_LOOP@
     }
 
