--- a/code_generation/CMakeLists.txt.in
+++ b/code_generation/CMakeLists.txt.in
@@ -4,6 +4,7 @@ project(carolina VERSION @PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJEC
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
 
 find_package(Boost COMPONENTS program_options REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
 
 find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
