--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -8,6 +8,9 @@ add_library(progress_printer progress_printer.cpp)
 add_executable(configure_histograms_1d configure_histograms_1d.cpp)
 target_include_directories(configure_histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
 
+add_executable(configure_histograms_2d configure_histograms_2d.cpp)
+target_include_directories(configure_histograms_2d PUBLIC ${CMAKE_BINARY_DIR}/include)
+
 add_executable(histograms_1d_text histograms_1d_text.cpp)
 target_link_libraries(histograms_1d_text ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
 
