--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,14 +5,9 @@ target_link_libraries(command_line_parser ${Boost_LIBRARIES})
 
 add_library(progress_printer progress_printer.cpp)
 
-add_executable(configure_histograms_1d configure_histograms_1d.cpp)
-target_include_directories(configure_histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
+add_library(mdpp16 mdpp16.cpp)
+target_link_libraries(mdpp16 ${ROOT_LIBRARIES})
 
-add_executable(configure_histograms_2d configure_histograms_2d.cpp)
-target_include_directories(configure_histograms_2d PUBLIC ${CMAKE_BINARY_DIR}/include)
-
-add_executable(histograms_1d_text histograms_1d_text.cpp)
-target_link_libraries(histograms_1d_text ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
-
-add_executable(multithread_screen multithread_screen.cpp)
-target_link_libraries(multithread_screen command_line_parser ${ROOT_LIBRARIES})
+add_executable(histograms_1d histograms_1d.cpp)
+target_include_directories(histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
+target_link_libraries(histograms_1d mdpp16 ${Boost_LIBRARIES} command_line_parser progress_printer ${ROOT_LIBRARIES})
