--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,3 +11,6 @@ target_link_libraries(mdpp16 ${ROOT_LIBRARIES})
 add_executable(histograms_1d histograms_1d.cpp)
 target_include_directories(histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
 target_link_libraries(histograms_1d mdpp16 ${Boost_LIBRARIES} command_line_parser progress_printer ${ROOT_LIBRARIES})
+
+add_executable(multitask multitask.cpp)
+target_link_libraries(multitask ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
