Energy vs. time histograms

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -19,6 +19,10 @@ add_library(channel channel.cpp)
 add_library(detector detector.cpp)
 target_link_libraries(detector channel)
 
+add_executable(energy_vs_time energy_vs_time.cpp)
+target_include_directories(energy_vs_time PUBLIC ${CMAKE_BINARY_DIR}/include)
+target_link_libraries(energy_vs_time detector module ${Boost_LIBRARIES} command_line_parser progress_printer ${ROOT_LIBRARIES} sis3316)
+
 add_executable(histograms_1d histograms_1d.cpp)
 target_include_directories(histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
 target_link_libraries(histograms_1d detector module ${Boost_LIBRARIES} command_line_parser progress_printer ${ROOT_LIBRARIES} sis3316)
