--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,6 @@ add_subdirectory(source)
 configure_file(include/calibrate_tree.hpp.in include/calibrate_tree.hpp)
 configure_file(include/energy_vs_time.hpp.in include/energy_vs_time.hpp)
 configure_file(include/histograms_1d.hpp.in include/histograms_1d.hpp)
+configure_file(include/histograms_1d_raw.hpp.in include/histograms_1d_raw.hpp)
 configure_file(include/histograms_2d.hpp.in include/histograms_2d.hpp)
 configure_file(include/split_tree.hpp.in include/split_tree.hpp)
