Rename "detector setup" to "analysis"
- The former DetectorSetup class actually contained much more than just the setup, so the new name is more justified.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -22,34 +22,34 @@ add_library(channel channel.cpp)
 add_library(detector detector.cpp)
 target_link_libraries(detector channel)
 
-add_library(detector_setup detector_setup.cpp)
+add_library(analysis analysis.cpp)
 
 add_executable(calibrate_tree calibrate_tree.cpp)
 target_include_directories(calibrate_tree PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(calibrate_tree detector ${Boost_LIBRARIES} command_line_parser detector_setup mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
+target_link_libraries(calibrate_tree detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
 
 add_executable(energy_vs_event_number energy_vs_event_number.cpp)
 target_include_directories(energy_vs_event_number PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(energy_vs_event_number detector ${Boost_LIBRARIES} command_line_parser detector_setup mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
+target_link_libraries(energy_vs_event_number detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
 
 add_executable(energy_vs_time energy_vs_time.cpp)
 target_include_directories(energy_vs_time PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(energy_vs_time detector ${Boost_LIBRARIES} command_line_parser detector_setup mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
+target_link_libraries(energy_vs_time detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
 
 add_executable(histograms_1d histograms_1d.cpp)
 target_include_directories(histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(histograms_1d detector ${Boost_LIBRARIES} command_line_parser detector_setup mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
+target_link_libraries(histograms_1d detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
 
 add_executable(histograms_1d_raw histograms_1d_raw.cpp)
 target_include_directories(histograms_1d_raw PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(histograms_1d_raw detector ${Boost_LIBRARIES} command_line_parser detector_setup mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
+target_link_libraries(histograms_1d_raw detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
 
 add_executable(histograms_1d_text histograms_1d_text.cpp)
 target_link_libraries(histograms_1d_text ${Boost_LIBRARIES} command_line_parser ${ROOT_LIBRARIES})
 
 add_executable(histograms_2d histograms_2d.cpp)
 target_include_directories(histograms_2d PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(histograms_2d detector ${Boost_LIBRARIES} command_line_parser detector_setup mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
+target_link_libraries(histograms_2d detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities)
 
 add_executable(multitask multitask.cpp)
 target_link_libraries(multitask ${Boost_LIBRARIES} ${ROOT_LIBRARIES} tfile_utilities)
