Update histograms_2d and source/CMakeLists.txt
- Delegate determination of valid energies to the EnergySensitiveDetector class.
- Delegate the search for possible pairs of coincident detectors to the CoincidenceMatrix class.
- The result is a very clean histograms_2d script.
- At the moment, the determination of the valid energies is still a dummy dummy function. The RF gate is not applied yet, because there is no "addback_time_vs_time_RF" member yet.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -25,41 +25,52 @@ target_link_libraries(v830 scaler_module ${ROOT_LIBRARIES})
 
 add_library(channel channel.cpp)
 
+add_library(coincidence_matrix coincidence_matrix.cpp)
+
+add_library(counter_detector_channel counter_detector_channel.cpp)
+target_link_libraries(counter_detector_channel channel)
+
+add_library(energy_sensitive_detector_channel energy_sensitive_detector_channel.cpp)
+target_link_libraries(energy_sensitive_detector_channel channel)
+
 add_library(detector detector.cpp)
 target_link_libraries(detector channel)
+
+add_library(counter_detector counter_detector.cpp)
+target_link_libraries(counter_detector channel detector)
+
+add_library(energy_sensitive_detector energy_sensitive_detector.cpp)
+target_link_libraries(energy_sensitive_detector channel detector)
 
 add_library(analysis analysis.cpp)
 
 add_executable(calibrate_tree calibrate_tree.cpp)
 target_include_directories(calibrate_tree PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(calibrate_tree detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+target_link_libraries(calibrate_tree analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
 
-add_executable(energy_vs_event_number energy_vs_event_number.cpp)
-target_include_directories(energy_vs_event_number PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(energy_vs_event_number detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+add_executable(history history.cpp)
+target_include_directories(history PUBLIC ${CMAKE_BINARY_DIR}/include)
+target_link_libraries(history analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
 
 add_executable(energy_vs_time energy_vs_time.cpp)
 target_include_directories(energy_vs_time PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(energy_vs_time detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+target_link_libraries(energy_vs_time analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
 
 add_executable(histograms_1d histograms_1d.cpp)
 target_include_directories(histograms_1d PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(histograms_1d detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+target_link_libraries(histograms_1d analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
 
 add_executable(histograms_1d_raw histograms_1d_raw.cpp)
 target_include_directories(histograms_1d_raw PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(histograms_1d_raw detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+target_link_libraries(histograms_1d_raw analysis ${Boost_LIBRARIES} command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
 
 add_executable(histograms_1d_text histograms_1d_text.cpp)
 target_link_libraries(histograms_1d_text ${Boost_LIBRARIES} command_line_parser ${ROOT_LIBRARIES})
 
 add_executable(histograms_2d histograms_2d.cpp)
 target_include_directories(histograms_2d PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(histograms_2d detector ${Boost_LIBRARIES} command_line_parser analysis mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
-
-add_executable(multitask multitask.cpp)
-target_link_libraries(multitask ${Boost_LIBRARIES} ${ROOT_LIBRARIES} tfile_utilities)
+target_link_libraries(histograms_2d analysis ${Boost_LIBRARIES} coincidence_matrix command_line_parser counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
 
 add_executable(split_tree split_tree.cpp)
 target_include_directories(split_tree PUBLIC ${CMAKE_BINARY_DIR}/include)
-target_link_libraries(split_tree analysis detector ${Boost_LIBRARIES} mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
+target_link_libraries(split_tree analysis ${Boost_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 tfile_utilities v830)
