--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,19 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
 
-set(ANALYSIS "analysis.hpp" CACHE STRING "Set name of header file in ${CMAKE_SOURCE_DIR}/include/ that contains the analysis configuration. Default: 'analysis.hpp'.")
+set(ANALYSIS "analysis_78Kr.hpp" CACHE STRING "Set name of header file in ${CMAKE_SOURCE_DIR}/include/experiments/ that contains the analysis configuration. Default: 'analysis_78Kr.hpp'.")
 
 add_compile_options(-Wall -Wextra)
 
-add_subdirectory(source)
+add_subdirectory(source/analysis)
+add_subdirectory(source/detectors)
+add_subdirectory(source/io)
+add_subdirectory(source/modules)
 
-configure_file(include/calibrate_tree.hpp.in include/calibrate_tree.hpp)
-configure_file(include/energy_vs_time.hpp.in include/energy_vs_time.hpp)
-configure_file(include/histograms_1d.hpp.in include/histograms_1d.hpp)
-configure_file(include/histograms_1d_raw.hpp.in include/histograms_1d_raw.hpp)
-configure_file(include/histograms_2d.hpp.in include/histograms_2d.hpp)
-configure_file(include/history.hpp.in include/history.hpp)
-configure_file(include/split_tree.hpp.in include/split_tree.hpp)
+configure_file(include/programs/calibrate_tree.hpp.in include/programs/calibrate_tree.hpp)
+configure_file(include/programs/energy_vs_time.hpp.in include/programs/energy_vs_time.hpp)
+configure_file(include/programs/histograms_1d.hpp.in include/programs/histograms_1d.hpp)
+configure_file(include/programs/histograms_1d_raw.hpp.in include/programs/histograms_1d_raw.hpp)
+configure_file(include/programs/histograms_2d.hpp.in include/programs/histograms_2d.hpp)
+configure_file(include/programs/history.hpp.in include/programs/history.hpp)
+configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
