--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,13 @@ add_subdirectory(source/analysis)
 add_subdirectory(source/detectors)
 add_subdirectory(source/io)
 add_subdirectory(source/modules)
+add_subdirectory(source/test)
 
+configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
 configure_file(include/programs/calibrate_tree.hpp.in include/programs/calibrate_tree.hpp)
 configure_file(include/programs/energy_vs_time.hpp.in include/programs/energy_vs_time.hpp)
 configure_file(include/programs/histograms_1d.hpp.in include/programs/histograms_1d.hpp)
 configure_file(include/programs/histograms_1d_raw.hpp.in include/programs/histograms_1d_raw.hpp)
 configure_file(include/programs/histograms_2d.hpp.in include/programs/histograms_2d.hpp)
 configure_file(include/programs/history.hpp.in include/programs/history.hpp)
-configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
+configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
