Sampling of energies
- In order to sample energies, the energy calibration needs to be inverted. This is performed approximately here using a linear interpolation of points within the expected amplitude range.
- The extrapolation is performed using a ROOT TGraph object.

--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -2,7 +2,11 @@ include_directories(${CMAKE_SOURCE_DIR}/include/analysis)
 include_directories(${CMAKE_SOURCE_DIR}/include/detectors)
 include_directories(${CMAKE_SOURCE_DIR}/include/experiments)
 include_directories(${CMAKE_SOURCE_DIR}/include/modules)
+include_directories(${CMAKE_SOURCE_DIR}/include/test)
+
+add_library(inverse_calibration inverse_calibration.cpp)
+target_link_libraries(inverse_calibration ${ROOT_LIBRARIES})
 
 add_executable(sampler sampler.cpp)
 target_include_directories(sampler PUBLIC ${CMAKE_BINARY_DIR}/include/test)
-target_link_libraries(sampler analysis ${ROOT_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel mdpp16 v830)
+target_link_libraries(sampler analysis ${ROOT_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel inverse_calibration mdpp16 v830)
