Include source/programs directory in build
- Forgot a statement in the top-level CMakeLists.txt
- Fix include error in source/programs/CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(source/analysis)
 add_subdirectory(source/detectors)
 add_subdirectory(source/io)
 add_subdirectory(source/modules)
+add_subdirectory(source/programs)
 add_subdirectory(source/test)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
