Sample events with energy and time information
- Implemented methods to write time data to module.
- Implemented methods to reset module data to NaN.
- Add program_options command-line option parser to sample program
- sample creates exactly one single event for each detector channel in the configuration.
- Using correct way of creating array-like branches in a TTree.
- Remove arbitrary restriction to times > 0 in histograms_1d_raw.
- With the present code, it is possible to read output of sample with histograms_1d_raw.

--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -9,4 +9,4 @@ target_link_libraries(inverse_calibration ${ROOT_LIBRARIES})
 
 add_executable(sampler sampler.cpp)
 target_include_directories(sampler PUBLIC ${CMAKE_BINARY_DIR}/include/test)
-target_link_libraries(sampler analysis ${ROOT_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel inverse_calibration mdpp16 v830)
+target_link_libraries(sampler analysis ${Boost_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel inverse_calibration mdpp16 ${ROOT_LIBRARIES} v830)
