Optional build of tests, coverage report

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,20 @@ include(${ROOT_USE_FILE})
 set(ANALYSIS "analysis_78Kr.hpp" CACHE STRING "Set name of header file in ${CMAKE_SOURCE_DIR}/include/experiments/ that contains the analysis configuration. Default: 'analysis_78Kr.hpp'.")
 
 add_compile_options(-Wall -Wextra)
+option(BUILD_TESTS "Build unit tests. Default: ON" ON)
+if(BUILD_TESTS)
+    add_compile_options(-Wall -Wextra -ftest-coverage --coverage)
+    link_libraries(gcov)
+endif(BUILD_TESTS)
 
 add_subdirectory(source/analysis)
 add_subdirectory(source/detectors)
 add_subdirectory(source/io)
 add_subdirectory(source/modules)
 add_subdirectory(source/programs)
-add_subdirectory(source/test)
+if(BUILD_TESTS)
+    add_subdirectory(source/test)
+endif(BUILD_TESTS)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
 configure_file(include/programs/calibrate_tree.hpp.in include/programs/calibrate_tree.hpp)
