Split up addback code, test calibrate_tree
- To make the addback code more readable, create a function that determines whether two events are coincident, and another one that sorts out the addback event with the largest energy deposition.
- calibrate_tree potentially splits the original data into several ROOT files. To check if this does not skip or doubly process data, enforce splitting in the tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,5 +39,5 @@ configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
 enable_testing()
 add_test(sample_test_data sampler --n 100)
 add_test(create_raw_histograms histograms_1d_raw test.root --output test_raw.root)
-add_test(calibrate_test_data calibrate_tree test.root --output test_cal.root --log)
+add_test(calibrate_test_data calibrate_tree test.root --output test_cal.root --log --block 100)
 add_test(create_histograms histograms_1d test_cal.log --output test_hist.root --log)
